add corotational anistropic constitutive model

--- a/examples/bar/harmonic-bar-coarse.config
+++ b/examples/bar/harmonic-bar-coarse.config
@@ -1,6 +1,5 @@
 *volumetricMeshFilename
-#examples/bar/fine/bar.veg
-examples/bar/fine/bar-inhomo.veg
+examples/bar/coarse/bar-coarse.veg
 
 *solver
 implicitBackwardEuler
@@ -9,34 +8,37 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
+#StVK
 #Anisotropic
-StVK
 #CLFEM
+CLAnistropic
 
 *renderingMeshFilename
-examples/bar/fine/bar-fine-veg.obj
+examples/bar/coarse/bar-coarse-veg.obj
 
 *objectRenderSurfaceMeshFilename
 examples/bar/bar-render.obj
 
 *objectRenderSurfaceMeshInterpolationFileName
-examples/bar/fine/bar-fine1.interp
+examples/bar/coarse/bar-coarse1.interp
 
 *fixedVerticesFilename
-examples/bar/fine/bar-fine-fixed.bou
+examples/bar/coarse/bar-coarse-fixed.bou
 
 *massMatrixFilename
-examples/bar/fine/bar-fine.mass
+examples/bar/coarse/bar-coarse.mass
 
 *outputFileNameBase
-obj/bar/fine-obj/obj_file
+obj/bar/harmonic-coarse-obj/obj_file
 
 #*forceLoadsFilename
-#examples/bar/fine/force.txt
+#examples/bar/coarse/force.txt
 
 *lightingConfigFilename
 examples/bar/bar.lighting
 
+*elasticTensorFilename
+examples/bar/harmonic-coarse-elastic-tensor.txt
 
 *timeStep
 0.001
@@ -51,7 +53,7 @@ examples/bar/bar.lighting
 1
 
 *dampingMassCoef
-0.0
+0.1
 
 *dampingStiffnessCoef
 0.0
