--- a/examples/bar/harmonic-bar-fine.config
+++ b/examples/bar/harmonic-bar-fine.config
@@ -1,5 +1,4 @@
 *volumetricMeshFilename
-#examples/bar/fine/bar.veg
 examples/bar/fine/bar-inhomo.veg
 
 *solver
@@ -9,9 +8,9 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
+#StVK
 #Anisotropic
-StVK
-#CLFEM
+CLFEM
 
 *renderingMeshFilename
 examples/bar/fine/bar-fine-veg.obj
@@ -29,7 +28,7 @@ examples/bar/fine/bar-fine-fixed.bou
 examples/bar/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar/fine-obj/obj_file
+obj/bar/harmonic-fine-obj/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
@@ -51,7 +50,7 @@ examples/bar/bar.lighting
 1
 
 *dampingMassCoef
-0.0
+0.1
 
 *dampingStiffnessCoef
 0.0
@@ -72,8 +71,8 @@ examples/bar/fine/planes.config
 true
 
 *g
-#0
-9.8
+0
+#9.8
 
 *cameraRadius
 12.6
