add heart models

--- a/examples/bar/bar-fine.config
+++ b/examples/bar/bar-fine.config
@@ -22,8 +22,8 @@ examples/bar/bar-render.obj
 *objectRenderSurfaceMeshInterpolationFileName
 examples/bar/fine/bar-fine1.interp
 
-*fixedVerticesFilename
-examples/bar/fine/bar-fine-fixed.bou
+#*fixedVerticesFilename
+#examples/bar/fine/bar-fine-fixed.bou
 
 *massMatrixFilename
 examples/bar/fine/bar-fine.mass
@@ -63,10 +63,10 @@ examples/bar/bar.lighting
 0.5
 
 *planeNumber
-0
+2
 
 *planesFilename
-examples/bar/fine/planes.config
+examples/bar/planes.config
 
 *addGravity
 true
