--- a/examples/bar/bar-coarse.config
+++ b/examples/bar/bar-coarse.config
@@ -23,8 +23,8 @@ examples/bar/bar-render.obj
 *objectRenderSurfaceMeshInterpolationFileName
 examples/bar/coarse/bar-coarse1.interp
 
-*fixedVerticesFilename
-examples/bar/coarse/bar-coarse-fixed.bou
+#*fixedVerticesFilename
+#examples/bar/coarse/bar-coarse-fixed.bou
 
 *massMatrixFilename
 examples/bar/coarse/bar-coarse.mass
@@ -66,10 +66,10 @@ examples/bar/coarse/coarse-elastic-tensor.txt
 0.5
 
 *planeNumber
-0
+2
 
 *planesFilename
-examples/bar/fine/planes.config
+examples/bar/planes.config
 
 *addGravity
 true
