add codes for rendering different materials

--- a/examples/bar/bar-fine.config
+++ b/examples/bar/bar-fine.config
@@ -1,6 +1,3 @@
-*volumetricMeshFilename
-#examples/bar/fine/bar.veg
-examples/bar/fine/bar-inhomo.veg
 
 *solver
 implicitBackwardEuler
@@ -13,23 +10,31 @@ implicitBackwardEuler
 StVK
 #CLFEM
 
+*volumetricMeshFilename
+#examples/bar/fine/bar.veg
+examples/bar/fine/bar-inhomo.veg
+
+
 *renderingMeshFilename
 examples/bar/fine/bar-fine-veg.obj
 
-*objectRenderSurfaceMeshFilename
+*objectRenderSurfaceMeshFileNum
+1
+
+*objectRenderSurfaceMeshFilename0
 examples/bar/bar-render.obj
 
-*objectRenderSurfaceMeshInterpolationFileName
+*objectRenderSurfaceMeshInterpolationFileName0
 examples/bar/fine/bar-fine1.interp
 
-#*fixedVerticesFilename
-#examples/bar/fine/bar-fine-fixed.bou
+*fixedVerticesFilename
+examples/bar/fine/bar-fine-fixed.bou
 
 *massMatrixFilename
 examples/bar/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar/fine-obj/obj_file
+obj/bar/fine/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
@@ -45,7 +50,7 @@ examples/bar/bar.lighting
 30
 
 *totalFrame
-200
+500
 
 *timestepPerOutputFile
 1
@@ -63,7 +68,7 @@ examples/bar/bar.lighting
 0.5
 
 *planeNumber
-2
+0
 
 *planesFilename
 examples/bar/planes.config
