--- a/examples/heart/heart-coarse.config
+++ b/examples/heart/heart-coarse.config
@@ -8,16 +8,18 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
-#Anisotropic
-StVK
+Anisotropic
+#StVK
 
 *renderingMeshFilename
 examples/heart/coarse/heart-coarse-veg.obj
 
-*objectRenderSurfaceMeshFilename
+*objectRenderSurfaceMeshFileNum
+3
+*objectRenderSurfaceMeshFilename0
 examples/heart/heart-render.obj
 
-*objectRenderSurfaceMeshInterpolationFileName
+*objectRenderSurfaceMeshInterpolationFileName0
 examples/heart/coarse/heart-coarse.interp
 
 #*fixedVerticesFilename
@@ -43,13 +45,13 @@ examples/heart/heart.lighting
 30
 
 *totalFrame
-10
+500
 
 *timestepPerOutputFile
 1
 
 *dampingMassCoef
-0.1
+0.0
 
 *dampingStiffnessCoef
 0.0
