--- a/examples/bar/bar-coarse.config
+++ b/examples/bar/bar-coarse.config
@@ -1,6 +1,3 @@
-*volumetricMeshFilename
-examples/bar/coarse/bar-coarse.veg
-
 *solver
 implicitBackwardEuler
 #implicitNewmark
@@ -12,25 +9,28 @@ Anisotropic
 #StVK
 #CLFEM
 
-*corotationalLinearFEM_warp
-1
+*volumetricMeshFilename
+examples/bar/coarse/bar-coarse.veg
+
 *renderingMeshFilename
 examples/bar/coarse/bar-coarse-veg.obj
 
-*objectRenderSurfaceMeshFilename
+*objectRenderSurfaceMeshFileNum
+1
+*objectRenderSurfaceMeshFilename0
 examples/bar/bar-render.obj
 
-*objectRenderSurfaceMeshInterpolationFileName
+*objectRenderSurfaceMeshInterpolationFileName0
 examples/bar/coarse/bar-coarse1.interp
 
-#*fixedVerticesFilename
-#examples/bar/coarse/bar-coarse-fixed.bou
+*fixedVerticesFilename
+examples/bar/coarse/bar-coarse-fixed.bou
 
 *massMatrixFilename
 examples/bar/coarse/bar-coarse.mass
 
 *outputFileNameBase
-obj/bar/coarse-obj/obj_file
+obj/bar/coarse/obj_file
 
 #*forceLoadsFilename
 #examples/bar/coarse/force.txt
@@ -54,7 +54,7 @@ examples/bar/coarse/coarse-elastic-tensor.txt
 1
 
 *dampingMassCoef
-0.1
+0.0
 
 *dampingStiffnessCoef
 0.0
@@ -66,7 +66,7 @@ examples/bar/coarse/coarse-elastic-tensor.txt
 0.5
 
 *planeNumber
-2
+0
 
 *planesFilename
 examples/bar/planes.config
