--- a/examples/heart/heart-coarse.config
+++ b/examples/heart/heart-coarse.config
@@ -12,15 +12,24 @@ Anisotropic
 #StVK
 
 *renderingMeshFilename
-examples/heart/coarse/heart-coarse-veg.obj
+examples/heart/coarse/heart-coarse-surface-mesh.obj
 
 *objectRenderSurfaceMeshFileNum
 3
 *objectRenderSurfaceMeshFilename0
-examples/heart/heart-render.obj
-
+examples/heart/heart-render0.obj
 *objectRenderSurfaceMeshInterpolationFileName0
-examples/heart/coarse/heart-coarse.interp
+examples/heart/coarse/heart-coarse0.interp
+
+*objectRenderSurfaceMeshFilename1
+examples/heart/heart-render1.obj
+*objectRenderSurfaceMeshInterpolationFileName1
+examples/heart/coarse/heart-coarse1.interp
+
+*objectRenderSurfaceMeshFilename2
+examples/heart/heart-render2.obj
+*objectRenderSurfaceMeshInterpolationFileName2
+examples/heart/coarse/heart-coarse2.interp
 
 #*fixedVerticesFilename
 #examples/heart/coarse/heart-coarse-fixed.bou
@@ -29,14 +38,14 @@ examples/heart/coarse/heart-coarse.interp
 examples/heart/coarse/heart-coarse.mass
 
 *outputFileNameBase
-obj/heart/coarse-obj/obj_file
+obj/heart/coarse/obj_file
 
 
 *lightingConfigFilename
 examples/heart/heart.lighting
 
-#*elasticTensorFilename
-#examples/heart/coarse/coarse-elastic-tensor.txt
+*elasticTensorFilename
+examples/heart/coarse/coarse-elastic-tensor.txt
 
 *timeStep
 0.001
