update heart examples

--- a/examples/heart/heart-coarse.config
+++ b/examples/heart/heart-coarse.config
@@ -8,8 +8,8 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
-Anisotropic
-#StVK
+#Anisotropic
+StVK
 
 *renderingMeshFilename
 examples/heart/coarse/heart-coarse-surface-mesh.obj
