update plane.* to resolve contact

--- a/examples/heart/heart-coarse.config
+++ b/examples/heart/heart-coarse.config
@@ -45,7 +45,7 @@ obj/heart/coarse/obj_file
 examples/heart/heart.lighting
 
 *elasticTensorFilename
-examples/heart/coarse/coarse-elastic-tensor.txt
+#examples/heart/coarse/coarse-elastic-tensor.txt
 
 *timeStep
 0.001
