add model bar-3 layers

--- a/examples/bar-3/bar-fine.config
+++ b/examples/bar-3/bar-fine.config
@@ -1,3 +1,6 @@
+*volumetricMeshFilename
+examples/bar-3/fine/bar-fine-inhomo.veg
+#examples/bar-3/fine/bar-homo.veg
 
 *solver
 implicitBackwardEuler
@@ -6,41 +9,35 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
-#Anisotropic
 StVK
-#CLFEM
-
-*volumetricMeshFilename
-examples/bar/fine/bar.veg
-#examples/bar/fine/bar-inhomo.veg
-
+#Anisotropic
 
 *renderingMeshFilename
-examples/bar/fine/bar-fine-veg.obj
+examples/bar-3/fine/bar-fine-veg.obj
 
 *objectRenderSurfaceMeshFileNum
 1
 
 *objectRenderSurfaceMeshFilename0
-examples/bar/bar-render.obj
+examples/bar-3/bar-render.obj
 
 *objectRenderSurfaceMeshInterpolationFileName0
-examples/bar/fine/bar-fine.interp
+examples/bar-3/fine/bar-fine.interp
 
-*fixedVerticesFilename
-examples/bar/fine/bar-fine-fixed.bou
+#*fixedVerticesFilename
+#examples/bar-3/fine/bar-fine-fixed.bou
 
 *massMatrixFilename
-examples/bar/fine/bar-fine.mass
+examples/bar-3/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar/fine/obj_file
+obj/bar-3/fine/obj_file
 
 #*forceLoadsFilename
-#examples/bar/fine/force.txt
+#examples/bar-3/fine/force.txt
 
 *lightingConfigFilename
-examples/bar/bar.lighting
+examples/bar-3/bar.lighting
 
 
 *timeStep
@@ -56,7 +53,7 @@ examples/bar/bar.lighting
 1
 
 *dampingMassCoef
-0.0
+0.1
 
 *dampingStiffnessCoef
 0.0
@@ -68,10 +65,10 @@ examples/bar/bar.lighting
 0.5
 
 *planeNumber
-0
+2
 
 *planesFilename
-examples/bar/planes.config
+examples/bar-3/planes-rotate.config
 
 *addGravity
 true
