--- a/examples/bar-3/harmonic-bar-coarse.config
+++ b/examples/bar-3/harmonic-bar-coarse.config
@@ -1,3 +1,5 @@
+*volumetricMeshFilename
+examples/bar/fine/bar-coarse.veg
 
 *solver
 implicitBackwardEuler
@@ -6,35 +8,27 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
+#StVK
 #Anisotropic
-StVK
-#CLFEM
-
-*volumetricMeshFilename
-examples/bar/fine/bar.veg
-#examples/bar/fine/bar-inhomo.veg
-
+CLFEM
 
 *renderingMeshFilename
-examples/bar/fine/bar-fine-veg.obj
+examples/bar/fine/bar-coarse-veg.obj
 
-*objectRenderSurfaceMeshFileNum
-1
-
-*objectRenderSurfaceMeshFilename0
+*objectRenderSurfaceMeshFilename
 examples/bar/bar-render.obj
 
-*objectRenderSurfaceMeshInterpolationFileName0
-examples/bar/fine/bar-fine.interp
+#*objectRenderSurfaceMeshInterpolationFileName
+#examples/bar/fine/bar-coarse.interp
 
-*fixedVerticesFilename
-examples/bar/fine/bar-fine-fixed.bou
+#*fixedVerticesFilename
+#examples/bar/fine/bar-fine-fixed.bou
 
 *massMatrixFilename
-examples/bar/fine/bar-fine.mass
+examples/bar/fine/bar-coarse.mass
 
 *outputFileNameBase
-obj/bar/fine/obj_file
+examples/bar/coarse-obj/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
@@ -42,6 +36,8 @@ obj/bar/fine/obj_file
 *lightingConfigFilename
 examples/bar/bar.lighting
 
+*elasticTensorFilename
+examples/bar/fine/coarse_elastic_tensor.txt
 
 *timeStep
 0.001
@@ -50,13 +46,13 @@ examples/bar/bar.lighting
 30
 
 *totalFrame
-500
+100
 
 *timestepPerOutputFile
 1
 
 *dampingMassCoef
-0.0
+0.1
 
 *dampingStiffnessCoef
 0.0
@@ -71,14 +67,14 @@ examples/bar/bar.lighting
 0
 
 *planesFilename
-examples/bar/planes.config
+examples/bar/fine/planes.config
 
 *addGravity
 true
 
 *g
-#0
-9.8
+0
+#9.8
 
 *cameraRadius
 12.6
