--- a/examples/bar-3/harmonic-bar-fine.config
+++ b/examples/bar-3/harmonic-bar-fine.config
@@ -1,3 +1,5 @@
+*volumetricMeshFilename
+examples/bar/fine/bar-fine-inhomo.veg
 
 *solver
 implicitBackwardEuler
@@ -6,25 +8,17 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
+#StVK
 #Anisotropic
-StVK
-#CLFEM
-
-*volumetricMeshFilename
-examples/bar/fine/bar.veg
-#examples/bar/fine/bar-inhomo.veg
-
+CLFEM
 
 *renderingMeshFilename
 examples/bar/fine/bar-fine-veg.obj
 
-*objectRenderSurfaceMeshFileNum
-1
-
-*objectRenderSurfaceMeshFilename0
+*objectRenderSurfaceMeshFilename
 examples/bar/bar-render.obj
 
-*objectRenderSurfaceMeshInterpolationFileName0
+*objectRenderSurfaceMeshInterpolationFileName
 examples/bar/fine/bar-fine.interp
 
 *fixedVerticesFilename
@@ -34,7 +28,7 @@ examples/bar/fine/bar-fine-fixed.bou
 examples/bar/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar/fine/obj_file
+examples/bar/fine-obj/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
@@ -50,13 +44,13 @@ examples/bar/bar.lighting
 30
 
 *totalFrame
-500
+200
 
 *timestepPerOutputFile
 1
 
 *dampingMassCoef
-0.0
+0.1
 
 *dampingStiffnessCoef
 0.0
@@ -71,14 +65,14 @@ examples/bar/bar.lighting
 0
 
 *planesFilename
-examples/bar/planes.config
+examples/bar/fine/planes.config
 
 *addGravity
 true
 
 *g
-#0
-9.8
+0
+#9.8
 
 *cameraRadius
 12.6
