--- a/examples/heart/heart-coarse.config
+++ b/examples/heart/heart-coarse.config
@@ -72,10 +72,10 @@ examples/heart/heart.lighting
 0.5
 
 *planeNumber
-1
+2
 
 *planesFilename
-examples/heart/planes.config
+examples/heart/planes-rotate.config
 
 *addGravity
 true
@@ -92,7 +92,8 @@ true
 
 *cameraLattitude
 8
-
+*focusPositionY
+4.0
 *focusPositionY
 2.0
 
