remove the conflicts

--- a/examples/bar/bar-coarse.config
+++ b/examples/bar/bar-coarse.config
@@ -5,8 +5,8 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
-Anisotropic
-#StVK
+#Anisotropic
+StVK
 #CLFEM
 
 *volumetricMeshFilename
@@ -30,7 +30,7 @@ examples/bar/coarse/bar-coarse-fixed.bou
 examples/bar/coarse/bar-coarse.mass
 
 *outputFileNameBase
-obj/bar/coarse/obj_file
+obj/bar-twist-homo/coarse/obj_file
 
 #*forceLoadsFilename
 #examples/bar/coarse/force.txt
@@ -38,8 +38,8 @@ obj/bar/coarse/obj_file
 *lightingConfigFilename
 examples/bar/bar.lighting
 
-*elasticTensorFilename
-examples/bar/coarse/coarse-elastic-tensor.txt
+#*elasticTensorFilename
+#examples/bar/coarse/coarse-elastic-tensor.txt
 
 *timeStep
 0.001
