--- a/examples/bar/bar-fine.config
+++ b/examples/bar/bar-fine.config
@@ -34,7 +34,7 @@ examples/bar/fine/bar-fine-fixed.bou
 examples/bar/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar/fine/obj_file
+obj/bar-twist-homo/fine/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
