fix plane render bug

--- a/examples/bar-3/bar-fine.config
+++ b/examples/bar-3/bar-fine.config
@@ -65,10 +65,10 @@ examples/bar-3/bar.lighting
 0.5
 
 *planeNumber
-2
+6
 
 *planesFilename
-examples/bar-3/planes-rotate.config
+examples/bar-3/planes.config
 
 *addGravity
 true
