--- a/examples/bar/bar-fine.config
+++ b/examples/bar/bar-fine.config
@@ -34,7 +34,7 @@ examples/bar/fine/bar-fine-fixed.bou
 examples/bar/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar/fine/obj_file
+obj/bar-twist-homo/fine/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
@@ -56,10 +56,10 @@ examples/bar/bar.lighting
 1
 
 *dampingMassCoef
-0.0
+1.0
 
 *dampingStiffnessCoef
-0.0
+0.01
 
 *deformableObjectCompliance
 10.0
