modify bar twist test case

--- a/examples/bar/bar-coarse.config
+++ b/examples/bar/bar-coarse.config
@@ -5,8 +5,8 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
-#Anisotropic
-StVK
+Anisotropic
+#StVK
 #CLFEM
 
 *volumetricMeshFilename
@@ -21,7 +21,7 @@ examples/bar/coarse/bar-coarse-veg.obj
 examples/bar/bar-render.obj
 
 *objectRenderSurfaceMeshInterpolationFileName0
-examples/bar/coarse/bar-coarse1.interp
+examples/bar/coarse/bar-coarse.interp
 
 *fixedVerticesFilename
 examples/bar/coarse/bar-coarse-fixed.bou
@@ -30,7 +30,7 @@ examples/bar/coarse/bar-coarse-fixed.bou
 examples/bar/coarse/bar-coarse.mass
 
 *outputFileNameBase
-obj/bar-twist-homo/coarse/obj_file
+obj/bar-twist/coarse/obj_file
 
 #*forceLoadsFilename
 #examples/bar/coarse/force.txt
@@ -38,17 +38,17 @@ obj/bar-twist-homo/coarse/obj_file
 *lightingConfigFilename
 examples/bar/bar.lighting
 
-#*elasticTensorFilename
-#examples/bar/coarse/coarse-elastic-tensor.txt
+*elasticTensorFilename
+examples/bar/coarse/coarse-elastic-tensor.txt
 
 *timeStep
-0.0005
+0.001
 
 *frame_rate
 30
 
 *totalFrame
-500
+300
 
 *timestepPerOutputFile
 1
@@ -57,13 +57,10 @@ examples/bar/bar.lighting
 0.0
 
 *dampingStiffnessCoef
-0.0
+0.01
 
 *deformableObjectCompliance
 10.0
-
-*baseFrequency
-0.5
 
 *planeNumber
 0
@@ -76,7 +73,7 @@ true
 
 *g
 #0
-9.8
+49
 
 *cameraRadius
 12.6
