--- a/examples/bar/bar-fine.config
+++ b/examples/bar/bar-fine.config
@@ -11,8 +11,8 @@ StVK
 #CLFEM
 
 *volumetricMeshFilename
-examples/bar/fine/bar.veg
-#examples/bar/fine/bar-inhomo.veg
+#examples/bar/fine/bar.veg
+examples/bar/fine/bar-inhomo.veg
 
 
 *renderingMeshFilename
@@ -34,7 +34,7 @@ examples/bar/fine/bar-fine-fixed.bou
 examples/bar/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar-twist-homo/fine/obj_file
+obj/bar-twist/fine/obj_file
 
 #*forceLoadsFilename
 #examples/bar/fine/force.txt
@@ -50,13 +50,13 @@ examples/bar/bar.lighting
 30
 
 *totalFrame
-500
+300
 
 *timestepPerOutputFile
 1
 
 *dampingMassCoef
-1.0
+0.0
 
 *dampingStiffnessCoef
 0.01
@@ -64,8 +64,6 @@ examples/bar/bar.lighting
 *deformableObjectCompliance
 10.0
 
-*baseFrequency
-0.5
 
 *planeNumber
 0
@@ -78,7 +76,7 @@ true
 
 *g
 #0
-9.8
+49
 
 *cameraRadius
 12.6
