add bar bend test case

--- a/examples/bar-bend/bar-fine.config
+++ b/examples/bar-bend/bar-fine.config
@@ -1,3 +1,6 @@
+*volumetricMeshFilename
+examples/bar-bend/fine/bar-fine-inhomo.veg
+#examples/bar-bend/fine/bar.veg
 
 *solver
 implicitBackwardEuler
@@ -6,51 +9,48 @@ implicitBackwardEuler
 #Euler
 
 *deformableObjectMethod
-#Anisotropic
 StVK
-#CLFEM
-
-*volumetricMeshFilename
-#examples/bar/fine/bar.veg
-examples/bar/fine/bar-inhomo.veg
-
+#Anisotropic
 
 *renderingMeshFilename
-examples/bar/fine/bar-fine-veg.obj
+examples/bar-bend/fine/bar-fine-veg.obj
+
+*initialSurfaceMeshFilename
+examples/bar-bend/fine/bar-initial-surface-mesh1.obj
 
 *objectRenderSurfaceMeshFileNum
 1
 
 *objectRenderSurfaceMeshFilename0
-examples/bar/bar-render.obj
+examples/bar-bend/bar-render.obj
 
 *objectRenderSurfaceMeshInterpolationFileName0
-examples/bar/fine/bar-fine.interp
+examples/bar-bend/fine/bar-fine.interp
 
 *fixedVerticesFilename
-examples/bar/fine/bar-fine-fixed.bou
+examples/bar-bend/fine/bar-fine-fixed.bou
 
 *massMatrixFilename
-examples/bar/fine/bar-fine.mass
+examples/bar-bend/fine/bar-fine.mass
 
 *outputFileNameBase
-obj/bar-twist/fine/obj_file
+obj/bar-bend/fine/obj_file
 
 #*forceLoadsFilename
-#examples/bar/fine/force.txt
+#examples/bar-bend/fine/force.txt
 
 *lightingConfigFilename
-examples/bar/bar.lighting
+examples/bar-bend/bar.lighting
 
 
 *timeStep
-0.001
+0.0005
 
 *frame_rate
 30
 
 *totalFrame
-300
+500
 
 *timestepPerOutputFile
 1
@@ -59,24 +59,26 @@ examples/bar/bar.lighting
 0.0
 
 *dampingStiffnessCoef
-0.01
+0.0
 
 *deformableObjectCompliance
 10.0
 
+*baseFrequency
+0.5
 
 *planeNumber
-0
+1
 
 *planesFilename
-examples/bar/planes.config
+examples/bar-bend/planes.config
 
 *addGravity
 true
 
 *g
-#0
-49
+0
+#9.8
 
 *cameraRadius
 12.6
