--- a/examples/bar-bend/bar-coarse.config
+++ b/examples/bar-bend/bar-coarse.config
@@ -1,3 +1,5 @@
+*volumetricMeshFilename
+examples/bar-3/coarse/bar-coarse.veg
 
 *solver
 implicitBackwardEuler
@@ -8,40 +10,36 @@ implicitBackwardEuler
 *deformableObjectMethod
 #Anisotropic
 StVK
-#CLFEM
-
-*volumetricMeshFilename
-#examples/bar/fine/bar.veg
-examples/bar/fine/bar-inhomo.veg
-
 
 *renderingMeshFilename
-examples/bar/fine/bar-fine-veg.obj
+examples/bar-3/coarse/bar-coarse-veg.obj
 
 *objectRenderSurfaceMeshFileNum
 1
 
 *objectRenderSurfaceMeshFilename0
-examples/bar/bar-render.obj
+examples/bar-3/bar-render.obj
 
 *objectRenderSurfaceMeshInterpolationFileName0
-examples/bar/fine/bar-fine.interp
+examples/bar-3/coarse/bar-coarse.interp
 
-*fixedVerticesFilename
-examples/bar/fine/bar-fine-fixed.bou
+#*fixedVerticesFilename
+#examples/bar-3/coarse/bar-coarse-fixed.bou
 
 *massMatrixFilename
-examples/bar/fine/bar-fine.mass
+examples/bar-3/coarse/bar-coarse.mass
 
 *outputFileNameBase
-obj/bar-twist/fine/obj_file
+obj/bar-3/coarse/obj_file
 
 #*forceLoadsFilename
-#examples/bar/fine/force.txt
+#examples/bar-3/coarse/force.txt
 
 *lightingConfigFilename
-examples/bar/bar.lighting
+examples/bar-3/bar.lighting
 
+*elasticTensorFilename
+examples/bar-3/coarse/coarse-elastic-tensor.txt
 
 *timeStep
 0.001
@@ -50,33 +48,35 @@ examples/bar/bar.lighting
 30
 
 *totalFrame
-300
+500
 
 *timestepPerOutputFile
 1
 
 *dampingMassCoef
-0.0
+0.1
 
 *dampingStiffnessCoef
-0.01
+0.0
 
 *deformableObjectCompliance
 10.0
 
+*baseFrequency
+0.5
 
 *planeNumber
-0
+2
 
 *planesFilename
-examples/bar/planes.config
+examples/bar-3/planes-rotate.config
 
 *addGravity
 true
 
 *g
-#0
-49
+0
+#9.8
 
 *cameraRadius
 12.6
