add invertible FEM

--- a/examples/flower/flower-fine.config
+++ b/examples/flower/flower-fine.config
@@ -16,6 +16,8 @@ examples/flower/fine/flower-inhomo.veg
 
 *renderingMeshFilename
 examples/flower/fine/flower-fine-surface-mesh.obj
+*initialSurfaceMeshFilename
+examples/flower/fine/flower-fine-initial-surface-mesh.obj
 
 *objectRenderSurfaceMeshFileNum
 1
@@ -30,7 +32,7 @@ examples/flower/fine/flower-fine.interp
 examples/flower/fine/flower-fine-fixed.bou
 
 *massMatrixFilename
-examples/flower/fine/flower-fine.mass
+examples/flower/fine/flower-fine1.mass
 
 *outputFileNameBase
 obj/flower/fine/obj_file
@@ -63,8 +65,6 @@ examples/flower/flower.lighting
 *deformableObjectCompliance
 10.0
 
-*baseFrequency
-0.5
 
 *planeNumber
 0
