--- a/examples/flower/flower-coarse.config
+++ b/examples/flower/flower-coarse.config
@@ -11,6 +11,8 @@ StVK
 
 *volumetricMeshFilename
 examples/flower/coarse/flower-coarse.veg
+*initialSurfaceMeshFilename
+examples/flower/coarse/flower-coarse-initial-surface-mesh.obj
 
 *renderingMeshFilename
 examples/flower/coarse/flower-coarse-surface-mesh.obj
@@ -24,7 +26,7 @@ examples/flower/flower-render.obj
 examples/flower/coarse/flower-coarse.interp
 
 *fixedVerticesFilename
-examples/flower/coarse/flower-coarse-fixed.bou
+examples/flower/coarse/flower-coarse-fixed1.bou
 
 *massMatrixFilename
 examples/flower/coarse/flower-coarse.mass
@@ -61,9 +63,6 @@ examples/flower/flower.lighting
 
 *deformableObjectCompliance
 10.0
-
-*baseFrequency
-0.5
 
 *planeNumber
 0
