update material properties generation for plant and change thestrain tensor vector generation error

--- a/examples/plant/plant-coarse.config
+++ b/examples/plant/plant-coarse.config
@@ -43,11 +43,11 @@ obj/plant/coarse/obj_file
 *lightingConfigFilename
 examples/plant/plant.lighting
 
-*elasticTensorFilename
-examples/plant/coarse/coarse-elastic-tensor-stable.txt
+#*elasticTensorFilename
+#examples/plant/coarse/coarse-elastic-tensor.txt
 
 *timeStep
-0.0005
+0.001
 
 *frame_rate
 30
