--- a/examples/plant/plant-fine.config
+++ b/examples/plant/plant-fine.config
@@ -6,9 +6,9 @@ implicitBackwardEuler
 
 *deformableObjectMethod
 #Anisotropic
-#StVK
+StVK
 #CLFEM
-InvertibleFEM
+#InvertibleFEM
 
 *invertibleMaterial
 StVK
@@ -21,7 +21,7 @@ examples/plant/fine/plant-inhomo.veg
 *renderingMeshFilename
 examples/plant/fine/plant-fine-surface-mesh.obj
 *initialSurfaceMeshFilename
-examples/plant/fine/plant-fine-initial-surface-mesh1.obj
+examples/plant/fine/plant-fine-initial-surface-mesh.obj
 
 *objectRenderSurfaceMeshFileNum
 1
